--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- netlify deploy -p ./build -t aaf6ee0a58dba6a9fa7d5cfe0ba86afa5e445f3c2a1a8c68ed7c2c97616e5aec -s f7911b7d-1cfa-40f2-b13e-b1fbd622fcac -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
